src/0_network/21_internet_gateway.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.core.id

  tags = {
    Name = "${local.project_name}-igw"
  }

  depends_on = [aws_vpc.core]
}
